--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Just Java</string>
     <string name="quantity">Quantity</string>
+    <string name="price">Price</string>
 </resources>
