--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Just Java</string>
     <string name="quantity">Quantity</string>
     <string name="price">Price</string>
+    <string name="_0">0</string>
+    <string name="decrement">-</string>
+    <string name="increment">+</string>
+    <string name="dollars">$0</string>
+    <string name="orderButton">order</string>
 </resources>
