--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="increment">+</string>
     <string name="dollars">$0</string>
     <string name="orderButton">order</string>
+    <string name="just_java">Just\nJava</string>
 </resources>
